Modify responsive styles on post creation page and fix weird post card styling on small widths

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.h-post-form {
-  min-height: 580px;
-}
